#4 일반회원 로그인, 회원가입, 비밀번호 암호화 완료 기업로그인 회원가입 로직 구현예정 	스크립트 미완료 로직 구성 후에 작업할 예정	-hyun-

--- a/JOBNOM/pom.xml
+++ b/JOBNOM/pom.xml
@@ -146,7 +146,7 @@
 		    <version>${org.springframework-version}</version>
 		</dependency>
 		
-		<!-- 비밀번호 암호화 스프리이큐리티 등록 -->
+		<!-- 비밀번호 암호화 스프링시큐리티 등록 -->
 		<dependency>
 		    <groupId>org.springframework.security</groupId>
 		    <artifactId>spring-security-core</artifactId>
