--- a/.project
+++ b/.project
@@ -3,6 +3,7 @@
 	<name>FinalProject</name>
 	<comment></comment>
 	<projects>
+		<project>JOBNOM</project>
 	</projects>
 	<buildSpec>
 	</buildSpec>
