--- a/JOBNOM/src/main/webapp/WEB-INF/web.xml
+++ b/JOBNOM/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
 			/WEB-INF/spring/root-context.xml
- 			/WEB-INF/spring/security-context.xml <!--비밀번호 암호화 -->
+ 			<!-- /WEB-INF/spring/security-context.xml 비밀번호 암호화 -->
 		</param-value>
 	</context-param>
 	
@@ -23,7 +23,7 @@
 			<param-name>contextConfigLocation</param-name>
 			<param-value>
 				/WEB-INF/spring/appServlet/servlet-context.xml
-<!-- 				/WEB-INF/spring/appServlet/aop-context.xml AOP파일등록 -->
+ 				/WEB-INF/spring/appServlet/aop-context.xml
 			</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
