--- a/JOBNOM/pom.xml
+++ b/JOBNOM/pom.xml
@@ -203,6 +203,12 @@
 		    <version>2.11.2</version>
 		</dependency>
 		
+		<!-- 이메일API -->
+		<dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.7</version>
+        </dependency>
 		
 	
 		<!-- Test -->
