--- a/JOBNOM/pom.xml
+++ b/JOBNOM/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.project</groupId>
 	<artifactId>jobnom</artifactId>
 	<name>JOBNOM</name>
-	<packaging>war</packaging>	
+	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	<properties>
 		<java-version>1.8</java-version>
@@ -209,6 +209,13 @@
             <artifactId>mail</artifactId>
             <version>1.4.7</version>
         </dependency>
+        
+        <!-- 이메일 처리하기위한 서포트 등록 -->
+        <dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
 		
 	
 		<!-- Test -->
