--- a/JOBNOM/pom.xml
+++ b/JOBNOM/pom.xml
@@ -208,7 +208,11 @@
 			<artifactId>mail</artifactId>
 			<version>1.4.7</version>
 		</dependency>
-		
+		<dependency>
+         <groupId>org.springframework</groupId>
+         <artifactId>spring-context-support</artifactId>
+         <version>${org.springframework-version}</version>
+      </dependency>
 
 
 		
