--- a/JOBNOM/pom.xml
+++ b/JOBNOM/pom.xml
@@ -202,7 +202,19 @@
 		    <artifactId>jackson-databind</artifactId>
 		    <version>2.11.2</version>
 		</dependency>
-		
+		<!-- 메일발송 -->
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
+		<dependency>
+         <groupId>org.springframework</groupId>
+         <artifactId>spring-context-support</artifactId>
+         <version>${org.springframework-version}</version>
+      </dependency>
+
+
 		
 	
 		<!-- Test -->
