--- a/JOBNOM/pom.xml
+++ b/JOBNOM/pom.xml
@@ -213,7 +213,12 @@
          <artifactId>spring-context-support</artifactId>
          <version>${org.springframework-version}</version>
       </dependency>
-
+      
+		<dependency>
+		    <groupId>xerces</groupId>
+		    <artifactId>xercesImpl</artifactId>
+		    <version>2.9.1</version>
+		</dependency>
 
 		
 	
