--- a/JOBNOM/pom.xml
+++ b/JOBNOM/pom.xml
@@ -230,7 +230,14 @@
 			<artifactId>junit</artifactId>
 			<version>4.7</version>
 			<scope>test</scope>
-		</dependency>        
+		</dependency>   
+		
+<!-- 		<dependency>
+		    <groupId>com.kakao.sdk</groupId>
+		    <artifactId>kakao</artifactId>
+		    <version>1.39.10</version>
+		</dependency> -->
+		     
 	</dependencies>
     <build>
         <plugins>
