--- a/JOBNOM/pom.xml
+++ b/JOBNOM/pom.xml
@@ -229,6 +229,12 @@
 			<version>4.7</version>
 			<scope>test</scope>
 		</dependency>   
+		
+		<dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180813</version>
+        </dependency>
 		     
 	</dependencies>
     <build>
